--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "bootstrap": "^5.1.3",
     "facesjs": "^3.6.0",
     "faker": "^5.5.3",
+    "material-design-icons": "^3.0.1",
+    "moment": "^2.29.1",
     "nanoid": "^3.1.25",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "bootstrap": "^5.1.3"
   }
 }
